# RAG-101

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  main.py
app/api/: __init__.py
app/api/v1/: __init__.py  agent.py  chat.py  documents.py  ingest.py
app/core/: __init__.py  config.py  state.py
app/schemas/: __init__.py  agent.py  chat.py  documents.py
app/services/: __init__.py  agent.py  agent_logger.py  answer.py  ingestion.py  knowledge_base.py  load_llm.py  rag_service.py  tools.py
docs/: work_history.md
docs/specs/: 2026-07-17-frontend-design.md
eval/: compare.py  eval_generation.py  golden_set.json  run_eval.py
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: client.test.ts  client.ts  types.ts
frontend/src/components/: Answer.tsx  ErrorBanner.tsx  QuestionForm.tsx  SourceCard.tsx  ToolCallCard.tsx
frontend/src/hooks/: useTranscript.ts
frontend/src/test/: setup.ts
frontend/src/views/: AgentView.test.tsx  AgentView.tsx  ChatView.test.tsx  ChatView.tsx  DocumentsView.test.tsx  DocumentsView.tsx
vector_store/: chunks.json  index.faiss
